Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,303 +1,302 @@
 @article{DeloneMcLean2003ISSuccessTenYearUpdate,
-  author  = {DeLone, William H. and McLean, Ephraim R.},
-  title   = {The {DeLone} and {McLean} model of information systems success: A ten-year update},
-  journal = {Journal of Management Information Systems},
-  year    = {2003},
-  volume  = {19},
-  number  = {4},
-  pages   = {9--30},
-  doi     = {10.1080/07421222.2003.11045748}
+    author  = {DeLone, William H. and McLean, Ephraim R.},
+    title   = {The {DeLone} and {McLean} model of information systems success: A ten-year update},
+    journal = {Journal of Management Information Systems},
+    year    = {2003},
+    volume  = {19},
+    number  = {4},
+    pages   = {9--30},
+    doi     = {10.1080/07421222.2003.11045748}
 }
 
 @inproceedings{Sahin2024LLM_proceedings,
-  author    = {{\c{S}}ahin, G{\"u}rkan and Varol, Karya and Pak, Burcu Kuleli},
-  title     = {{LLM} and {RAG}-based question answering assistant for enterprise knowledge management},
-  booktitle = {2024 9th International Conference on Computer Science and Engineering (UBMK)},
-  year      = {2024},
-  publisher = {IEEE},
-  doi       = {10.1109/UBMK62123.2024.10613279}
+    author    = {{\c{S}}ahin, G{\"u}rkan and Varol, Karya and Pak, Burcu Kuleli},
+    title     = {{LLM} and {RAG}-based question answering assistant for enterprise knowledge management},
+    booktitle = {2024 9th International Conference on Computer Science and Engineering (UBMK)},
+    year      = {2024},
+    publisher = {IEEE},
+    doi       = {10.1109/UBMK62123.2024.10613279}
 }
 
 @online{Brandt2023,
-  author    = {Brandt, Mathias},
-  year      = {2023},
-  month     = {jul},
-  day       = {7},
-  title     = {Wie lange brauchen {Online-Dienste}, um eine Million Menschen zu erreichen?},
-  publisher = {Statista},
-  url       = {https://de.statista.com/infografik/29195/zeitraum-den-online-dienste-gebraucht-haben-um-eine-million-nutzer-zu-erreichen/},
-  urldate   = {2025-07-31}
+    author    = {Brandt, Mathias},
+    year      = {2023},
+    month     = {jul},
+    day       = {7},
+    title     = {Wie lange brauchen {Online-Dienste}, um eine Million Menschen zu erreichen?},
+    publisher = {Statista},
+    url       = {https://de.statista.com/infografik/29195/zeitraum-den-online-dienste-gebraucht-haben-um-eine-million-nutzer-zu-erreichen/},
+    urldate   = {2025-07-31}
 }
 
 @online{Huber2025,
-  author    = {Huber, Sandro},
-  year      = {2025},
-  month     = {jun},
-  title     = {{ChatGPT} Nutzerzahlen (Stand Juni 2025)},
-  publisher = {SH Digital},
-  url       = {https://www.sh-digital.ch/blog/chatgpt-nutzerzahlen},
-  urldate   = {2025-07-31}
+    author    = {Huber, Sandro},
+    year      = {2025},
+    month     = {jun},
+    title     = {{ChatGPT} Nutzerzahlen (Stand Juni 2025)},
+    publisher = {SH Digital},
+    url       = {https://www.sh-digital.ch/blog/chatgpt-nutzerzahlen},
+    urldate   = {2025-07-31}
 }
 
 @online{McKinsey2023,
-  author    = {{McKinsey \& Company}},
-  year      = {2023},
-  month     = {nov},
-  title     = {{GenAI's} implications for {Germany's} labor market},
-  publisher = {McKinsey \& Company},
-  url       = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe%20and%20middle%20east/deutschland/news/presse/2023/2023-11-24%20genai%20implikationen%20deutschlands%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf}
+    author    = {{McKinsey \& Company}},
+    year      = {2023},
+    month     = {nov},
+    title     = {{GenAI's} implications for {Germany's} labor market},
+    publisher = {McKinsey \& Company},
+    url       = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe\%20and\%20middle\%20east/deutschland/news/presse/2023/2023-11-24\%20genai\%20implikationen\%20deutschlands\%20arbeitsmarkt/en\_mckinsey\_genai\_implications\_germany\_labor\_market.pdf}
 }
 
 @online{GoogleCloudRAG,
     author  = {{Google Cloud}},
     title   = {What is retrieval-augmented generation ({RAG})?},
     url     = {https://cloud.google.com/use-cases/retrieval-augmented-generation?hl=en},
-    urldate = {2025-07-31},
+    urldate = {2025-07-31}
 }
 
 @article{Bruckhaus2024RAG,
-  author  = {Bruckhaus, Tilmann},
-  title   = {{RAG} does not work for enterprises},
-  journal = {arXiv preprint arXiv:2406.04369},
-  year    = {2024}
+    author  = {Bruckhaus, Tilmann},
+    title   = {{RAG} does not work for enterprises},
+    journal = {arXiv preprint arXiv:2406.04369},
+    year    = {2024}
 }
 
 @inproceedings{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024,
-  author    = {Barnett, Scott and Kurniawan, Stefanus and Thudumu, Srikanth and Brannelly, Zach and Abdelrazek, Mohamed},
-  title     = {Seven failure points when engineering a retrieval augmented generation system},
-  booktitle = {Proceedings of the {IEEE/ACM} 3rd International Conference on {AI} Engineering - Software Engineering for {AI}},
-  year      = {2024},
-  month     = {apr},
-  pages     = {88--98},
-  doi       = {10.1145/3644815.3644945}
+    author    = {Barnett, Scott and Kurniawan, Stefanus and Thudumu, Srikanth and Brannelly, Zach and Abdelrazek, Mohamed},
+    title     = {Seven failure points when engineering a retrieval augmented generation system},
+    booktitle = {Proceedings of the {IEEE/ACM} 3rd International Conference on {AI} Engineering - Software Engineering for {AI}},
+    year      = {2024},
+    month     = {apr},
+    pages     = {88--98},
+    doi       = {10.1145/3644815.3644945}
 }
 
 @inproceedings{Es_James_Espinosa_Anke_Schockaert_2024,
-  author    = {Es, Shahul and James, Jithin and Espinosa-Anke, Luis and Schockaert, Steven},
-  title     = {{Ragas}: Automated evaluation of retrieval augmented generation},
-  booktitle = {Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
-  year      = {2024},
-  month     = {mar},
-  pages     = {121--130},
-  doi       = {10.18653/v1/2024.eacl-demo.16}
+    author    = {Es, Shahul and James, Jithin and Espinosa-Anke, Luis and Schockaert, Steven},
+    title     = {{Ragas}: Automated evaluation of retrieval augmented generation},
+    booktitle = {Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
+    year      = {2024},
+    month     = {mar},
+    pages     = {121--130},
+    doi       = {10.18653/v1/2024.eacl-demo.16}
 }
 
 @inproceedings{Saad_Falcon_Khattab_Potts_Zaharia_2024,
-  author    = {Saad-Falcon, Jon and Khattab, Omar and Potts, Christopher and Zaharia, Matei},
-  title     = {{Ares}: An automated evaluation framework for retrieval-augmented generation systems},
-  booktitle = {Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
-  year      = {2024},
-  month     = {jun},
-  pages     = {216--235},
-  doi       = {10.18653/v1/2024.naacl-long.20}
+    author    = {Saad-Falcon, Jon and Khattab, Omar and Potts, Christopher and Zaharia, Matei},
+    title     = {{Ares}: An automated evaluation framework for retrieval-augmented generation systems},
+    booktitle = {Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
+    year      = {2024},
+    month     = {jun},
+    pages     = {216--235},
+    doi       = {10.18653/v1/2024.naacl-long.20}
 }
 
 @article{Davis1989,
-  author  = {Davis, Fred D.},
-  title   = {Perceived usefulness, perceived ease of use, and user acceptance of information technology},
-  journal = {MIS Quarterly},
-  year    = {1989},
-  volume  = {13},
-  number  = {3},
-  pages   = {319--340},
-  doi     = {10.2307/249008}
+    author  = {Davis, Fred D.},
+    title   = {Perceived usefulness, perceived ease of use, and user acceptance of information technology},
+    journal = {MIS Quarterly},
+    year    = {1989},
+    volume  = {13},
+    number  = {3},
+    pages   = {319--340},
+    doi     = {10.2307/249008}
 }
 
 @article{Jennex2006,
-  author  = {Jennex, Murray E. and Olfman, Lorne},
-  title   = {A model of knowledge management success},
-  journal = {International Journal of Knowledge Management (IJKM)},
-  year    = {2006},
-  volume  = {2},
-  number  = {3},
-  pages   = {51--68},
-  doi     = {10.4018/jkm.2006070104}
+    author  = {Jennex, Murray E. and Olfman, Lorne},
+    title   = {A model of knowledge management success},
+    journal = {International Journal of Knowledge Management (IJKM)},
+    year    = {2006},
+    volume  = {2},
+    number  = {3},
+    pages   = {51--68},
+    doi     = {10.4018/jkm.2006070104}
 }
 
 @book{Davenport,
-  author    = {Davenport, Thomas H. and Prusak, Laurence},
-  year      = {1998},
-  title     = {Working knowledge: How organizations manage what they know},
-  publisher = {Harvard Business School Press}
+    author    = {Davenport, Thomas H. and Prusak, Laurence},
+    year      = {1998},
+    title     = {Working knowledge: How organizations manage what they know},
+    publisher = {Harvard Business School Press}
 }
 
 @article{Jennex2006WhatIsKM,
-  author  = {Jennex, Murray E.},
-  year    = {2006},
-  title   = {What is knowledge management?},
-  journal = {International Journal of Knowledge Management},
-  volume  = {2},
-  number  = {1},
-  pages   = {i--iv}
+    author  = {Jennex, Murray E.},
+    year    = {2006},
+    title   = {What is knowledge management?},
+    journal = {International Journal of Knowledge Management},
+    volume  = {2},
+    number  = {1},
+    pages   = {i--iv}
 }
 
 @online{MinskyBritannica,
-  author    = {Dennis, Michael Aaron},
-  year      = {2025},
-  month     = {mar},
-  day       = {5},
-  title     = {Marvin {Minsky}},
-  publisher = {Encyclopedia Britannica},
-  url       = {https://www.britannica.com/biography/Marvin-Minsky},
-  urldate   = {2025-08-01}
+    author    = {Dennis, Michael Aaron},
+    year      = {2025},
+    month     = {mar},
+    day       = {5},
+    title     = {Marvin {Minsky}},
+    publisher = {Encyclopedia Britannica},
+    url       = {https://www.britannica.com/biography/Marvin-Minsky},
+    urldate   = {2025-08-01}
 }
 
 @article{Lund2023,
-  author  = {Lund, Brady D. and Wang, Ting and Mannuru, Nishith Reddy and Nie, Bing and Shimray, Somipam and Wang, Ziang},
-  title   = {{ChatGPT} and a new academic reality: {AI}-written research papers and the ethics of the large language models in scholarly publishing},
-  journal = {Journal of the Association for Information Science and Technology},
-  year    = {2023},
-  volume  = {74},
-  number  = {5},
-  pages   = {570--581},
-  doi     = {10.1002/asi.24793}
+    author  = {Lund, Brady D. and Wang, Ting and Mannuru, Nishith Reddy and Nie, Bing and Shimray, Somipam and Wang, Ziang},
+    title   = {{ChatGPT} and a new academic reality: {AI}-written research papers and the ethics of the large language models in scholarly publishing},
+    journal = {Journal of the Association for Information Science and Technology},
+    year    = {2023},
+    volume  = {74},
+    number  = {5},
+    pages   = {570--581},
+    doi     = {10.1002/asi.24793}
 }
 
 @inproceedings{Lewis2020,
-  author    = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
-  title     = {Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
-  booktitle = {Advances in Neural Information Processing Systems 33},
-  editor    = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and Lin, H.},
-  pages     = {9459--9474},
-  year      = {2020},
-  publisher = {Curran Associates, Inc.},
+    author    = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and Riedel, Sebastian and Kiela, Douwe},
+    title     = {Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
+    booktitle = {Advances in Neural Information Processing Systems 33},
+    editor    = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and Lin, H.},
+    pages     = {9459--9474},
+    year      = {2020},
+    publisher = {Curran Associates, Inc.}
 }
 
 @online{AWS_RAG,
-  author    = {{Amazon Web Services}},
-  title     = {What is {RAG}? – Retrieval-augmented generation explained},
-  url       = {https://aws.amazon.com/what-is/retrieval-augmented-generation/},
-  urldate   = {2025-07-31},
+    author    = {{Amazon Web Services}},
+    title     = {What is {RAG}? – Retrieval-augmented generation explained},
+    url       = {https://aws.amazon.com/what-is/retrieval-augmented-generation/},
+    urldate   = {2025-07-31}
 }
 
 @online{NStarX_Inc._2025,
-  author  = {{NStarX Inc.}},
-  year    = {2025},
-  month   = {jul},
-  title   = {The {$2.5} million question: Why data quality makes or breaks your enterprise {RAG} system},
-  url     = {https://nstarxinc.com/blog/the-2-5-million-question-why-data-quality-makes-or-breaks-your-enterprise-rag-system/}
+    author  = {{NStarX Inc.}},
+    title   = {{The \$2.5 million question: Why data quality makes or breaks your enterprise RAG system}},
+    url     = {https://nstarxinc.com/blog/the-2-5-million-question-why-data-quality-makes-or-breaks-your-enterprise-rag-system/},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleGenAIEvaluation,
-  author  = {{Google Cloud}},
-  title   = {Generative {AI} model evaluation overview},
-  url     = {https://cloud.google.com/vertex-ai/generative-ai/docs/models/evaluation-overview},
-  urldate = {2025-08-05},
+    author  = {{Google Cloud}},
+    title   = {Generative {AI} model evaluation overview},
+    url     = {https://cloud.google.com/vertex-ai/generative-ai/docs/models/evaluation-overview},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleAnalytics,
-  author  = {{Google for Developers}},
-  title   = {Google {Analytics} 4},
-  url     = {https://developers.google.com/analytics/devguides/collection/ga4},
-  urldate = {2025-08-05},
+    author  = {{Google for Developers}},
+    title   = {Google {Analytics} 4},
+    url     = {https://developers.google.com/analytics/devguides/collection/ga4},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleCloudDocumentation,
-  author  = {{Google Cloud}},
-  title   = {Google Cloud Documentation},
-  url     = {https://cloud.google.com/docs},
-  urldate = {2025-08-05},
+    author  = {{Google Cloud}},
+    title   = {Google Cloud Documentation},
+    url     = {https://cloud.google.com/docs},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleVertexAISearch,
-  author  = {{Google Cloud}},
-  title   = {Introduction to Vertex {AI} Search},
-  url     = {https://cloud.google.com/generative-ai-app-builder/docs/introduction#es-and-personalize},
-  urldate = {2025-08-05},
+    author  = {{Google Cloud}},
+    title   = {Introduction to Vertex {AI} Search},
+    url     = {https://cloud.google.com/generative-ai-app-builder/docs/introduction\#es-and-personalize},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleReranker,
-  author  = {{Google Cloud}},
-  title   = {Rank and rerank records},
-  url     = {https://cloud.google.com/generative-ai-app-builder/docs/ranking#rank_or_rerank_a_set_of_records_according_to_a_query},
-  urldate = {2025-08-05},
+    author  = {{Google Cloud}},
+    title   = {Rank and rerank records},
+    url     = {https://cloud.google.com/generative-ai-app-builder/docs/ranking\#rank\_or\_rerank\_a\_set\_of\_records\_according\_to\_a\_query},
+    urldate = {2025-08-05}
 }
 
 @online{LangChain,
-  author  = {{LangChain}},
-  title   = {LangChain},
-  url     = {https://www.langchain.com/},
-  urldate = {2025-08-05},
+    author  = {{LangChain}},
+    title   = {LangChain},
+    url     = {https://www.langchain.com/},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleGemini,
-  author  = {{Google for Developers}},
-  title   = {Gemini {API} models},
-  url     = {https://ai.google.dev/gemini-api/docs/models},
-  urldate = {2025-08-05},
+    author  = {{Google for Developers}},
+    title   = {Gemini {API} models},
+    url     = {https://ai.google.dev/gemini-api/docs/models},
+    urldate = {2025-08-05}
 }
 
 @article{Chan2024,
-  author  = {Chan, Chi-Min and Xu, Chunpu and Yuan, Ruibin and Luo, Hongyin and Xue, Wei and Guo, Yike and Fu, Jie},
-  title   = {{RQ-RAG}: Learning to refine queries for retrieval augmented generation},
-  journal = {arXiv preprint arXiv:2404.00610},
-  year    = {2024}
+    author  = {Chan, Chi-Min and Xu, Chunpu and Yuan, Ruibin and Luo, Hongyin and Xue, Wei and Guo, Yike and Fu, Jie},
+    title   = {{RQ-RAG}: Learning to refine queries for retrieval augmented generation},
+    journal = {arXiv preprint arXiv:2404.00610},
+    year    = {2024}
 }
 
 @article{Setty2024,
-  author  = {Setty, Spurthi and Thakkar, Harsh and Lee, Alyssa and Chung, Eden and Vidra, Natan},
-  title   = {Improving retrieval for {RAG} based question answering models on financial documents},
-  journal = {arXiv preprint arXiv:2404.07221},
-  year    = {2024}
+    author  = {Setty, Spurthi and Thakkar, Harsh and Lee, Alyssa and Chung, Eden and Vidra, Natan},
+    title   = {Improving retrieval for {RAG} based question answering models on financial documents},
+    journal = {arXiv preprint arXiv:2404.07221},
+    year    = {2024}
 }
 
 @online{GoogleBigQuery,
-  author  = {{Google Cloud}},
-  title   = {What is BigQuery?},
-  url     = {https://cloud.google.com/bigquery/docs},
-  urldate = {2025-08-05},
+    author  = {{Google Cloud}},
+    title   = {What is BigQuery?},
+    url     = {https://cloud.google.com/bigquery/docs},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleCloudRunService,
-  author  = {{Google Cloud}},
-  title   = {What is Cloud Run?},
-  url     = {https://cloud.google.com/run/docs/overview/what-is-cloud-run#cloud_run_services},
-  urldate = {2025-08-05},
+    author  = {{Google Cloud}},
+    title   = {What is Cloud Run?},
+    url     = {https://cloud.google.com/run/docs/overview/what-is-cloud-run\#cloud\_run\_services},
+    urldate = {2025-08-05}
 }
 
 @online{DSGVO_2024,
-  title   = {Datenschutz-Grundverordnung ({DSGVO})},
-  year    = {2024},
-  url     = {https://dsgvo-gesetz.de/},
-  urldate = {2025-08-05}
+    title   = {Datenschutz-Grundverordnung ({DSGVO})},
+    year    = {2024},
+    url     = {https://dsgvo-gesetz.de/},
+    urldate = {2025-08-05}
 }
 
 @online{GoogleEmbedding001,
-  author  = {{Google for Developers}},
-  title   = {Embeddings with the Gemini {API}},
-  url     = {https://ai.google.dev/gemini-api/docs/embeddings},
-  urldate = {2025-08-05},
+    author  = {{Google for Developers}},
+    title   = {Embeddings with the Gemini {API}},
+    url     = {https://ai.google.dev/gemini-api/docs/embeddings},
+    urldate = {2025-08-05}
 }
 
 @article{Baligodugula2025,
-  author  = {Baligodugula, Vishnu Vardhan and Amsaad, Fathi},
-  month   = {jul},
-  title   = {Unsupervised learning: Comparative analysis of clustering techniques on high-dimensional data},
-  journal = {arXiv preprint arXiv:2503.23215},
-  year    = {2025}
+    author  = {Baligodugula, Vishnu Vardhan and Amsaad, Fathi},
+    month   = {jul},
+    title   = {Unsupervised learning: Comparative analysis of clustering techniques on high-dimensional data},
+    journal = {arXiv preprint arXiv:2503.23215},
+    year    = {2025}
 }
 
 @article{McInnes2020,
-  author  = {McInnes, Leland and Healy, John and Melville, James},
-  title   = {{UMAP}: Uniform manifold approximation and projection for dimension reduction},
-  journal = {arXiv preprint arXiv:1802.03426},
-  year    = {2020}
+    author  = {McInnes, Leland and Healy, John and Melville, James},
+    title   = {{UMAP}: Uniform manifold approximation and projection for dimension reduction},
+    journal = {arXiv preprint arXiv:1802.03426},
+    year    = {2020}
 }
 
 @online{GoogleGeminiPricing,
-  author  = {{Google for Developers}},
-  title   = {Gemini {API} pricing},
-  url     = {https://ai.google.dev/gemini-api/docs/pricing},
-  urldate = {2025-08-05},
+    author  = {{Google for Developers}},
+    title   = {Gemini {API} pricing},
+    url     = {https://ai.google.dev/gemini-api/docs/pricing},
+    urldate = {2025-08-05}
 }
 
 @article{Peffers2007,
-  author  = {Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A. and Chatterjee, Samir},
-  title   = {A design science research methodology for information systems research},
-  journal = {Journal of Management Information Systems},
-  year    = {2007},
-  volume  = {24},
-  number  = {3},
-  pages   = {45--77},
-  doi     = {10.2753/MIS0742-1222240302}
+    author  = {Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A. and Chatterjee, Samir},
+    title   = {A design science research methodology for information systems research},
+    journal = {Journal of Management Information Systems},
+    year    = {2007},
+    volume  = {24},
+    number  = {3},
+    pages   = {45--77},
+    doi     = {10.2753/MIS0742-1222240302}
 }
