Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,7 @@
     booktitle = {2024 9th International Conference on Computer Science and Engineering (UBMK)},
     year      = {2024},
     publisher = {IEEE},
+    page = {157--162},
     doi       = {10.1109/UBMK62123.2024.10613279}
 }
 
@@ -45,7 +46,7 @@
     month     = {nov},
     title     = {{GenAI's} implications for {Germany's} labor market},
     publisher = {McKinsey \& Company},
-    url       = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe\%20and\%20middle\%20east/deutschland/news/presse/2023/2023-11-24\%20genai\%20implikationen\%20deutschlands\%20arbeitsmarkt/en\_mckinsey\_genai\_implications\_germany\_labor\_market.pdf}
+    url       = {https://www.mckinsey.com/de/~/media/mckinsey/locations/europe%20and%20middle%20east/deutschland/news/presse/2023/2023-11-24%20genai%20implikationen%20deutschlands%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf}
 }
 
 @online{GoogleCloudRAG,
@@ -55,11 +56,14 @@
     urldate = {2025-07-31}
 }
 
-@article{Bruckhaus2024RAG,
-    author  = {Bruckhaus, Tilmann},
-    title   = {{RAG} does not work for enterprises},
-    journal = {arXiv preprint arXiv:2406.04369},
-    year    = {2024}
+@misc{Bruckhaus2024RAG,
+      title={RAG Does Not Work for Enterprises}, 
+      author={Tilmann Bruckhaus},
+      year={2024},
+      eprint={2406.04369},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE},
+      url={https://arxiv.org/abs/2406.04369}, 
 }
 
 @inproceedings{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024,
